Closed Bug 481594 Opened 15 years ago Closed 15 years ago

nsCSSDeclaration::ValueAppended doesn't need to handle shorthands

Categories

(Core :: CSS Parsing and Computation, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: dbaron, Assigned: dbaron)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
http://people.mozilla.org/~mnandigama/codecoverage/src/layout/style/nsCSSDeclaration.cpp.gcov.html showed no hits on the shorthand-handling in nsCSSDeclaration::ValueAppended , and looking at the code makes it clear that the shorthand-handling isn't needed.

This patch removes it.
Attachment #365620 - Flags: superreview?(bzbarsky)
Attachment #365620 - Flags: review?(bzbarsky)
Attachment #365620 - Flags: superreview?(bzbarsky)
Attachment #365620 - Flags: superreview+
Attachment #365620 - Flags: review?(bzbarsky)
Attachment #365620 - Flags: review+
http://hg.mozilla.org/mozilla-central/rev/d5df3e584fdb
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Priority: -- → P5
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: