nsCSSDeclaration::ValueAppended is never called on shorthands, so it doesn't need code to handle them.  (Bug 481594)  r+sr=bzbarsky